Added remaining funtionalites and made game functional

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <div class="msgcontainer hide">
+        <p class="msg">Winner</p>
+    </div>
     <main>
         <h1 class="gamehead">Tic-Tac-Toe</h1>
         <div class="game">
